# librcs-5.7

./: AUTHORS  Makefile.am  configure.in
man/: Makefile.am
src/: Makefile.am  Makefile.in  ci.c  co.c  conf.sh  ident.c  maketime.c  maketime.h  merge.c  merger.c  partime.c  partime.h  rcs.c  rcsbase.h  rcsclean.c  rcsdiff.c  rcsedit.c  rcsfcmp.c  rcsfnms.c  rcsgen.c  rcslex.c  rcsmerge.c  rcstime.c  rcsutil.c  rlog.c
